--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,9 @@ variables:
   imageRepository: 'caiyijupipelinesjavascriptdocker'
   containerRegistry: 'tonyregistry.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/app/Dockerfile'
-  tag: '$(Build.BuildId)'
+  azureSubscription: '2bc3f237-742a-4226-b4f5-8744c71ab84d'
+  appName: 'customercontainer2'
+  tag: 'latest'
 
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
@@ -37,3 +39,11 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
+
+    ## Add the below snippet at the end of your pipeline
+    - task: AzureWebAppContainer@1
+      displayName: 'Azure Web App on Container Deploy'
+      inputs:
+        azureSubscription: $(azureSubscription)
+        appName: $(appName)
+        containers: $(containerRegistry)/$(imageRepository):$(tag)
